--- a/src/app/Compartido/menu/menu.component.css
+++ b/src/app/Compartido/menu/menu.component.css
@@ -18,15 +18,14 @@
     background-size: cover;
   }
 
-
-  .avatar2{
-    margin-top: 30px;
+.avatar2{
+    margin: 10px 10px 0px 10px;
     width: 50px;
     height: 50px;
     size: cover;
     border-radius: 50%;
     border: solid white;
   }
-  .username{
+.username{
     color: white;
   }
