--- a/src/app/Compartido/menu/menu.component.html
+++ b/src/app/Compartido/menu/menu.component.html
@@ -13,7 +13,7 @@
             </defs>
             </svg>  
       </div> 
-      <div>
+      <div fxLayout="row">
 
         <!-- sin logear -->
 
@@ -35,12 +35,15 @@
         <app-autorizado [rol]="'empresa'">
           <ng-container Autorizado>
             <div fxLayout="row">
+
+              <button class="toolbar-boton" mat-button (click)="navegar('')">Inicio</button>
+
             <button class="toolbar-boton" mat-button (click)="navegar('empresas/publicar-empleo')">Publicar Empleo</button>
 
             <button class="toolbar-boton" mat-button (click)="navegar('empresas/postulantes')">Postulantes</button>
   
             <button class="toolbar-boton" mat-button (click)="navegar('empresas/empleos-publicados')">Empleos Publicados</button>
-
+              
             <button class="toolbar-boton" mat-button (click)="navegar('empresas/perfil')">Perfil</button>
 
             </div>
@@ -52,6 +55,8 @@
           <ng-container Autorizado>
 
             <div fxLayout="row"> 
+            <button class="toolbar-boton" mat-button (click)="navegar('')">Inicio</button>
+  
 
             <button class="toolbar-boton" mat-button (click)="navegar('buscar-empleo')">Buscar empleo</button>
 
@@ -61,7 +66,7 @@
 
             <button class="toolbar-boton" mat-button (click)="navegar('postulantes/perfil')">Perfil</button>
 
-            </div>
+          </div>
           </ng-container>
         </app-autorizado>
         
@@ -69,6 +74,9 @@
         <app-autorizado [rol]="'administrador'">
           <ng-container Autorizado>
             <div fxLayout="row"> 
+
+            <button class="toolbar-boton" mat-button (click)="navegar('')">Inicio</button>
+
             <button class="toolbar-boton" mat-button (click)="navegar('administrador/administrar-usuarios')">usuarios</button>
 
             <button class="toolbar-boton" mat-button (click)="navegar('administrador/administrar-publicaciones')">publicaciones</button>
@@ -84,10 +92,13 @@
 
         <app-autorizado>
           <ng-container Autorizado>
-            <div fxLayout="row">
-              <span class="username">{{nombre}}</span>
-              <img src="https://media.revistagq.com/photos/5ca5e76ac4b7fb5a2aba7800/master/w_1280%2Cc_limit/los_50_hombres_mas_elegantes_de_2015_346935171.jpg" alt="" class="avatar2">
-            <button class="toolbar-boton" mat-button (click)="logOut()">Salir</button>
+            <div fxLayout="column" >
+              <div fxLayout="row">
+                <img src="https://media.revistagq.com/photos/5ca5e76ac4b7fb5a2aba7800/master/w_1280%2Cc_limit/los_50_hombres_mas_elegantes_de_2015_346935171.jpg" alt="" class="avatar2">
+                <button class="toolbar-boton" mat-button (click)="logOut()">Salir</button>
+              </div>
+              
+              <!-- <span class="username">{{nombre}}</span> -->
             </div>
             
           </ng-container>
