--- a/src/app/empresas/postulantes/postulantes.component.html
+++ b/src/app/empresas/postulantes/postulantes.component.html
@@ -1,1 +1,72 @@
-<p>postulantes works!</p>
+<div class="contenedor_postulantes">
+    <div fxLayoutAlign="center"><h1 class="postulantes_titulo"> Mis Postulantes</h1></div>
+
+    <div class="contenedor_cards_postulantes" fxLayout="row">
+        <div fxLayout="column" >
+            <mat-card class="card_postulante" *ngFor="let item of postulantes1">
+                <div fxLayout="row">
+                    <div >
+                        <img class="card_imagen" src="http://www.nosotros-los-ingenieros.com/wp-content/uploads/2020/06/cooper.jpg" alt="">
+                    </div>
+                    <div class="card_contenido" fxLayout="column">
+                        <mat-card-title >
+                            <h3 class="card_nombre">Marcos Ramirez Loayza</h3>
+                        </mat-card-title>
+                        <mat-card-subtitle>
+                            <h3 class="card_cargo">Ingeniero de sistemas</h3>
+                        </mat-card-subtitle>
+                        <mat-card-content >
+                            <div class="contenido_descripcion">
+                                <span>Postulado para:</span>   <br> <p>Encargado de Gestion de redes y TI </p> 
+                            </div>
+                            
+                        </mat-card-content>
+                        
+                    </div>
+                    
+                </div>
+                <div  fxLayout="rows" fxLayoutAlign="center">
+                    <button class="card_boton" mat-button>Ver perfil</button>
+                    <button class="card_boton" mat-button>Descargar CV</button>
+                    <button class="card_boton" mat-button>descartar</button>
+                </div>
+            </mat-card>
+        </div>
+        <div fxLayout="column" >
+            <mat-card class="card_postulante" *ngFor="let item of postulantes2">
+                <div fxLayout="row">
+                    <div >
+                        <img class="card_imagen" src="http://www.nosotros-los-ingenieros.com/wp-content/uploads/2020/06/cooper.jpg" alt="">
+                    </div>
+                    <div class="card_contenido" fxLayout="column">
+                        <mat-card-title >
+                            <h3 class="card_nombre">Marcos Ramirez Loayza</h3>
+                        </mat-card-title>
+                        <mat-card-subtitle>
+                            <h3 class="card_cargo">Ingeniero de sistemas</h3>
+                        </mat-card-subtitle>
+                        <mat-card-content >
+                            <div class="contenido_descripcion">
+                                <span>Postulado para:</span>   <br> <p>Encargado de Gestion de redes y TI </p> 
+                            </div>
+                            
+                        </mat-card-content>
+                        
+                    </div>
+                    
+                </div>
+                <div  fxLayout="rows" fxLayoutAlign="center">
+                    <button class="card_boton" mat-button>Ver perfil</button>
+                    <button class="card_boton" mat-button>Descargar CV</button>
+                    <button class="card_boton" mat-button>descartar</button>
+                </div>
+            </mat-card>
+        </div>
+        
+
+
+
+        
+        
+    </div>
+</div>
