--- a/src/app/Compartido/menu/menu.component.html
+++ b/src/app/Compartido/menu/menu.component.html
@@ -94,7 +94,7 @@
           <ng-container Autorizado>
             <div fxLayout="column" >
               <div fxLayout="row">
-                <img src="https://media.revistagq.com/photos/5ca5e76ac4b7fb5a2aba7800/master/w_1280%2Cc_limit/los_50_hombres_mas_elegantes_de_2015_346935171.jpg" alt="" class="avatar2">
+                <img src="../../../assets/logos/Persona_Mesa de trabajo 1.png" alt="" class="avatar2">
                 <button class="toolbar-boton" mat-button (click)="logOut()">Salir</button>
               </div>
               
