--- a/src/app/empresas/perfil-empresa/perfil-empresa.component.html
+++ b/src/app/empresas/perfil-empresa/perfil-empresa.component.html
@@ -8,7 +8,7 @@
             
                 <div fxLayout="column" >
                     <img *ngIf="imagenBase64" class="foto_imagen" [src]="imagenBase64" alt="">
-                    <img *ngIf="!imagenBase64" class="foto_imagen" src="https://media.revistagq.com/photos/5ca5e76ac4b7fb5a2aba7800/master/w_1280%2Cc_limit/los_50_hombres_mas_elegantes_de_2015_346935171.jpg" alt="">
+                    <img *ngIf="!imagenBase64" class="foto_imagen" src="../../../assets/logos/Persona_Mesa de trabajo 1.png" alt="">
                     
                     <div fxLayoutAlign="center">
                         <button class="input_imagen" type="button" mat-button (click)="fileInput.click()"> <mat-icon>camera_enhance</mat-icon></button>
@@ -20,7 +20,7 @@
                 
             </div>
             <div >
-                <button class="guardar_cambios" type="button" mat-button (click)="guardarCambios(form.value)"> Guardar cambios <mat-icon>update</mat-icon></button>
+                <button class="guardar_cambios" type="button" mat-button (click)="guardarprueba(form.value)" [disabled]="form.invalid"> Guardar cambios <mat-icon>update</mat-icon></button>
             </div>
             
         </div>
@@ -31,13 +31,13 @@
                 <mat-form-field appearance="fill" class="formulario-inputs">
                     <mat-label>Nombre Empresa</mat-label>
                     <input formControlName="nombre_empresa" matInput>
-                    <mat-error *ngIf="form.invalid"></mat-error>
+                    <mat-error *ngIf="form.invalid">{{obtenerError()}}</mat-error>
                 </mat-form-field><br>
     
                 <mat-form-field appearance="fill" class="formulario-inputs">
                     <mat-label>Descripcion</mat-label>
                     <textarea formControlName="descripcion" matInput></textarea>
-                    <mat-error *ngIf="form.invalid"></mat-error>
+                    <mat-error *ngIf="form.invalid">{{obtenerError()}}</mat-error>
                 </mat-form-field><br>
     
                 <mat-form-field appearance="fill" class="formulario-inputs">
@@ -49,34 +49,36 @@
                 <mat-form-field appearance="fill" class="formulario-inputs">
                     <mat-label>Sector</mat-label>
                     <input formControlName="sector" matInput>
-                    <mat-error *ngIf="form.invalid"></mat-error>
+                    <mat-error *ngIf="form.invalid">{{obtenerError()}}</mat-error>
                 </mat-form-field><br>
     
                 <mat-form-field appearance="fill" class="formulario-inputs">
                     <mat-label>Dirección</mat-label>
                     <input formControlName="direccion" matInput>
-                    <mat-error *ngIf="form.invalid"></mat-error>
+                    <mat-error *ngIf="form.invalid">{{obtenerError()}}</mat-error>
+                </mat-form-field><br>
+
+                <mat-form-field appearance="fill" class="formulario-inputs">
+                    <mat-label>Correo electronico de contacto</mat-label>
+                    <input type="email" formControlName="correo" matInput>
+                    <mat-error *ngIf="form.invalid">{{obtenerErrorCorreo()}}</mat-error>
                 </mat-form-field><br>
 
                 <div fxLayout="row" fxLayoutAlign="space-between" >
                     <mat-form-field appearance="fill" class="formulario-inputs_telefono">
                         <mat-label>Celular</mat-label>
-                        <input type="tel"  formControlName="celular" matInput placeholder="7XXXXXXX" >
-                        <mat-error *ngIf="form.invalid"></mat-error>
+                        <input type="number"  formControlName="celular" matInput placeholder="7XXXXXXX" >
+                        <mat-error *ngIf="form.invalid">{{obtenerErrorCelular()}}</mat-error>
                     </mat-form-field><br>
         
                     <mat-form-field appearance="fill" class="formulario-inputs_telefono">
                         <mat-label>Telefono</mat-label>
-                        <input type="tel" formControlName="telefono" matInput placeholder="64-00000">
+                        <input type="number" formControlName="telefono" matInput placeholder="64-00000">
                         <mat-error *ngIf="form.invalid"></mat-error>
                     </mat-form-field><br>
                 </div>
             </div>
             
-            
-            
-
-
         </div>
     </form>
 
