--- a/src/app/Compartido/menu/menu.component.html
+++ b/src/app/Compartido/menu/menu.component.html
@@ -107,7 +107,8 @@
           <ng-container Autorizado>
             <div fxLayout="column" >
               <div fxLayout="row">
-                <img src="../../../assets/logos/Persona_Mesa de trabajo 1.png" alt="" class="avatar2">
+                <img *ngIf="foto" [src]="foto" alt="" class="avatar2">
+                <img *ngIf="!foto" src="../../../assets/logos/Persona_Mesa de trabajo 1.png" alt="" class="avatar2">
                 <button class="toolbar-boton" mat-button (click)="logOut()">Salir</button>
               </div>
               
